--- a/src/app/modules/components/tabla-registros/tabla-registros.component.html
+++ b/src/app/modules/components/tabla-registros/tabla-registros.component.html
@@ -54,6 +54,14 @@
               </div>
             </td>
           </tr>
+          <!-- Fila de totales -->
+          <tr class="table-info fw-bold">
+            <td colspan="6"><strong>TOTALES:</strong></td>
+            <td><strong>${{ totalIngresos.toLocaleString() }}</strong></td>
+            <td><strong>${{ totalGastos.toLocaleString() }}</strong></td>
+            <td><strong>${{ totalGeneral.toLocaleString() }}</strong></td>
+            <td colspan="2"></td>
+          </tr>
         </tbody>
       </table>
     </div>
