--- a/src/app/modules/components/registro-formulario/registro-formulario.component.html
+++ b/src/app/modules/components/registro-formulario/registro-formulario.component.html
@@ -146,3 +146,12 @@
     </div>
   </div>
 </div>
+
+<!-- Modal de confirmación -->
+<app-confirmacion-modal
+  [mostrar]="mostrarModal"
+  [datos]="datosModal"
+  (confirmar)="confirmarGuardado()"
+  (cancelar)="cancelarGuardado()"
+  (cerrar)="cancelarGuardado()">
+</app-confirmacion-modal>
